# polars-random

./: .pre-commit-config.yaml  404.html  Cargo.toml  README.md  index.html  justfile  mkdocs.yml  objects.inv  prek.toml  pyproject.toml  sitemap.xml
.github/: dependabot.yml  release_drafter_template.yml
.github/workflows/: docs_publish.yml  pypi_publish.yml  testing.yml
api_reference/: index.html
benchmarks/: benchmark.py  results.json  results.md
docs/: api_reference.md  index.md
examples/: run.py
polars_random/: __init__.py
search/: search_index.json
src/: expressions.rs
tests/: test_polars_random.py  test_version.py
