[package]
name = "polars-random"
version = "0.4.0"
description = "Polars plugin for generating random distributions"
edition = "2021"
license = "MIT"
readme = "README.md"

[lib]
name = "_polars_random"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.53.0", default-features = false }
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "0.26.0", features = ["derive"] }
rand = { version = "0.9", features = ["small_rng"] }
rand_distr = "0.5"
serde = { version = "1", features = ["derive"] }
