[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "polars-random"
description = "Generate random numbers and statistical distributions natively in Polars DataFrames"
authors = [
  { name = "Diego Garcia Lozano", email = "diegoglozano96@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "polars>=1.0.0",
]
keywords = [
    "polars",
    "polars-plugin",
    "random",
    "random-numbers",
    "random-distribution",
    "statistics",
    "dataframe",
    "uniform",
    "normal",
    "binomial",
    "numpy",
    "rust",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://diegoglozano.github.io/polars-random/"
Documentation = "https://diegoglozano.github.io/polars-random/"
Repository = "https://github.com/diegoglozano/polars-random"
Issues = "https://github.com/diegoglozano/polars-random/issues"
Changelog = "https://github.com/diegoglozano/polars-random/releases"

[dependency-groups]
dev = [
  "maturin>=1.9,<2.0",
  "mkdocs>=1.6,<2.0",
  "mkdocs-material>=9.5,<10.0",
  "mkdocstrings[python]>=0.27,<1.0",
  "prek>=0.3,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<8.0",
  "ruff>=0.9,<1.0",
  "ty>=0.0.33,<1.0",
]

[tool.maturin]
module-name = "polars_random._internal"
binding = "pyo3"
features = ["pyo3/extension-module"]

[[tool.ty.overrides]]
include = ["tests/**/*.py", "tests/*.py"]

# polars namespaces are registered at import time; ty can't see them.
# Test code also relies on polars's Series-vs-Expr return types; allow those too.
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
unsupported-operator = "ignore"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=polars_random --cov-report term-missing --no-cov-on-fail"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]

[tool.ruff]
line-length = 100
target-version = "py39"
fix = true

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "B",  # flake8-bugbear
  "W",  # Warning
  "F",  # pyflakes
  "UP",  # pyupgrade
  "I001",  # unsorted-imports
  "T201",  # print found
  "T203",  # pprint found
  "RUF022",  # Unsorted __all__
  "RUF023",  # Unforted __slots__
]
ignore=[
  # Recommended ignores by ruff when using formatter
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]

[tool.ruff.lint.per-file-ignores]
# Benchmarks are CLI scripts: they print to stdout and rebind names in closures.
"benchmarks/*.py" = ["T201", "T203", "B023"]
